@@ -1,3 +1,7 @@
+Tue Nov 23 22:08:22 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htlib/StringList.cc(Join): Applied Loic's patch to fix memory leak.
+
 Tue Nov 23 21:52:18 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	[Applied patch from Hanno Mueller <kontakt@hanno.de>, which includes...]
